# mops-voice

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-mops-voice.md
docs/superpowers/specs/: 2026-03-17-mops-voice-design.md
mops_voice/: __init__.py  __main__.py  audio.py  config.py  image_attach.py  llm.py  logging_setup.py  main.py  personality.py  runtime_settings.py  transcribe.py  tts.py
scripts/: clicker_test.py  train_voice.py
tests/: test_audio.py  test_config.py  test_image_attach.py  test_llm.py  test_main.py  test_personality.py  test_runtime_settings.py  test_transcribe.py
xtts_server/: pyproject.toml  server.py
