[project]
name = "mops-voice"
version = "0.1.0"
description = "Voice-controlled CLI assistant for digital fabrication via MOPS MCP"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0,<2",
    "pywhispercpp>=1.3",
    "f5-tts-mlx>=0.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sounddevice>=0.5",
    "soundfile>=0.13",
    "pynput>=1.8",
    "rich>=13.0",
    "numpy>=2.0",
    "anthropic>=0.40",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
