[project]
name = "xtts-server"
version = "0.1.0"
description = "Standalone XTTS TTS server for mops-voice"
requires-python = ">=3.11,<3.12"
dependencies = [
    "coqui-tts",
    "torch",
    "torchaudio",
    "flask",
    "soundfile",
    "huggingface-hub",
]

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
